# ev-cockpit-sim

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/qml/: BatteryGrid.qml  Dashboard.qml  Main.qml  OtaPanel.qml  SocGauge.qml  StatTile.qml
app/src/: cell_model.cpp  cell_model.hpp  main.cpp  ota_model.cpp  ota_model.hpp  vehicle_model.cpp  vehicle_model.hpp
bms/: CMakeLists.txt
bms/include/bms/: battery_pack.hpp
bms/src/: battery_pack.cpp
bms/tests/: test_bms.cpp
ota/: CMakeLists.txt
ota/include/ota/: update_manager.hpp
ota/src/: update_manager.cpp
ota/tests/: test_ota.cpp
